Fix fancy year graph overflow
Adding 2015-16 needed a change to the CSS for the element

--- a/_sass/_year-graph.sass
+++ b/_sass/_year-graph.sass
@@ -8,7 +8,7 @@
 
   .year-graph-bar
     float: left
-    width: 1/(2015-1940)*100%
+    width: 1/(2016-1940)*100%
     background: red
 
     a
